{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 71,
  "lineage": "d002b78e-a969-ee77-65be-e25036a4f38b",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "ip_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/publicIPAddresses/dev-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.32.87",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip",
            "resource_group_name": "resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/networkInterfaces/nic",
            "internal_domain_name_suffix": "v02wjbssilzehhe2he0psvivgh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/publicIPAddresses/dev-ip",
                "subnet_id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/virtualNetworks/network/subnets/subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8E-5D-6E",
            "name": "nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "resources",
            "tags": {
              "VM": "NIC",
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Compute/virtualMachines/vm"
          },
          "dependencies": [
            "azurerm_public_ip.pub_ip",
            "azurerm_resource_group.az-rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.az-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/networkSecurityGroups/security_group",
            "location": "eastus",
            "name": "security_group",
            "resource_group_name": "resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "dev_rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "136.36.177.148/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/networkSecurityGroups/security_group/securityRules/dev_rule",
            "name": "dev_rule",
            "network_security_group_name": "security_group",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "resources",
            "source_address_prefix": "136.36.177.148/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.sg",
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pub_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/publicIPAddresses/dev-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.32.87",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip",
            "resource_group_name": "resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/virtualNetworks/network/subnets/subnet",
            "name": "subnet",
            "resource_group_name": "resources",
            "virtual_network_name": "network"
          },
          "dependencies": [
            "azurerm_resource_group.az-rg",
            "azurerm_virtual_network.az-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/virtualNetworks/network/subnets/subnet",
            "network_security_group_id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/networkSecurityGroups/security_group",
            "subnet_id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/virtualNetworks/network/subnets/subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.sg",
            "azurerm_resource_group.az-rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.az-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8664b9ae-4252-43f2-9c9c-3934f9551537",
            "id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/virtualNetworks/network",
            "location": "eastus",
            "name": "network",
            "resource_group_name": "resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/virtualNetworks/network/subnets/subnet",
                "name": "subnet",
                "security_group": "/subscriptions/971d1702-4e04-4ee8-8a00-a20a30ab547d/resourceGroups/resources/providers/Microsoft.Network/networkSecurityGroups/security_group"
              }
            ],
            "tags": {
              "environment": "dev",
              "network": "up"
            }
          },
          "dependencies": [
            "azurerm_resource_group.az-rg"
          ]
        }
      ]
    }
  ]
}